kube/gcp/rapid-ocr/rapid-ocr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rapid-ocr
  namespace: chunkmydocs
  labels:
    app.kubernetes.io/name: rapid-ocr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: rapid-ocr
  template:
    metadata:
      namespace: chunkmydocs
      labels:
        app.kubernetes.io/name: rapid-ocr
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - rapid-ocr
              topologyKey: "kubernetes.io/hostname"
      tolerations:
      - key: "nvidia.com/gpu.b"
        operator: "Exists"
        effect: "NoSchedule"
      - key: "nvidia.com/gpu"
        operator: "Exists"
        effect: "PreferNoSchedule"
      containers:
      - name: rapid-ocr
        image: luminainc/rapid-ocr:7abe8412
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        securityContext:
          privileged: true
          capabilities:
            add: ["SYS_ADMIN"]
        resources:
          limits:
            nvidia.com/gpu: 1
          requests:
            nvidia.com/gpu: 1
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 120
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 120
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
        volumeMounts:
        - name: dshm
          mountPath: /dev/shm
      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
          sizeLimit: 5Gi
