kube/gcp/rapid-ocr/rapid-ocr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rapid-ocr-service
  namespace: chunkmydocs
  labels:
    app.kubernetes.io/name: rapid-ocr
  annotations:
    cloud.google.com/backend-config: '{"default": "rapid-ocr-backendconfig"}'
spec:
  selector:
    app.kubernetes.io/name: rapid-ocr
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
